# ProyectosCpp

./: arbin.h  exam  exam.cpp  exam_dos  exam_dos.cpp  exam_dos.exe.stackdump  gaiatrie.cpp  guia.cpp  nada.cpp  prueba  prueba.cpp  pruebados  pruebados.cpp  pruebatres  pruebatres.cpp
ClaseDosCpp/: main.cpp  punteros.cpp
ClaseTres/: flujodecontrol
Clase_2/: main  main.cpp
Clase_6/: main
PracticasCPPCasa/: colas  colas.cpp  listas.cpp  listas_circulares.cpp  pilas.cpp  punteros.cpp
atajos_git/: atajos_git.bash_profile
claseCinco/: string  string.cpp
claseCuatro/: arrays  arrays.cpp
claseUnoHeaders/: max.cpp
clase_10_clases/: main
clase_11/: calses_constructores.cpp  main
clase_12_listas/: listas  listas.cpp
clase_13_TRIE/: main  main.cpp  main.exe.stackdump  tarea  tarea.cpp  tarea2  tarea2.cpp  tarea2.exe.stackdump
clase_14/: main.cpp
clase_15_herencia/: main  main.cpp
clase_16/: main  main.cpp
clase_16_my_arraylist/: main  main.cpp
clase_17/: main.cpp
clase_18/: main  main2
clase_18_interface__herenecia_multiple/: main.cpp  main2.cpp
clase_19/: main.cpp
clase_19_HashCode/: main  main.cpp  main.exe.stackdump
clase_1_Headers/: funciones.cpp  funciones.h
clase_20/: main.cpp
clase_21/: main
clase_21_exepciones/: exepciones.cpp
clase_22/: lista  lista.cpp  main  (+1 more)
clase_7_enum_struct/: CMakeLists.txt
clase_7_enum_struct/source/: enum_struct.cpp
thinker2/: .gitignore  CMakeLists.txt  README.md
thinker2/Configuration/: NNTopology.json  keyControlsA.json  readmeKey.txt  thresholds.json  thresholds.template.json
thinker2/Docs/: PruebaRamThinker.docx  guia de usuario thinker.docx  manual cmake.docx
thinker2/Docs/development environment/: development environment.docx
thinker2/Docs/googleTest/: Tutorial GoogleTest .docx
thinker2/Exceptions/: CMakeLists.txt
thinker2/Exceptions/include/: ExceptionGame.h  ExceptionNoFile.h  ExceptionNoInstall.h  ExceptionNoMethod.h  ExceptionNoPath.h  ExceptionVelocity.h
thinker2/Exceptions/source/: ExceptionGame.cpp  ExceptionNoFile.cpp  ExceptionNoInstall.cpp  ExceptionNoMethod.cpp  ExceptionNoPath.cpp  ExceptionVelocity.cpp
thinker2/Test/: CMakeLists.txt  InstallNewbieTest.cpp  LayerTest.cpp  LevelVelocityTest.cpp  MappingRGBTest.cpp  NeuralNetworkFullRAMTest.cpp  NeuralNetworkRAMTest.cpp  NeuralNetworkRGBTest.cpp  NeuralNetworkTest.cpp  NewbieTest.cpp  Normalization_Test.cpp  PerceptronTest.cpp  PlayerPathGameTest.cpp  ResizeRGBTest.cpp  TestNewbieLoad.cpp  TransitionFunctionTest.cpp
thinker2/Test/partidas/MsPacman/Hideky17_10_25_15_53_34/: match.json
thinker2/Test/partidas/MsPacman/Hideky17_10_25_15_53_34/rgb/: 2.txt  3.txt  5.txt
thinker2/Tools/Norm/: CMakeLists.txt  RAMFilter.cpp
thinker2/Tools/Norm/Match/: template.json
thinker2/Tools/Norm/include/: Defines.h  FileEnums.h  FileStatus.h  JsonEnums.h  JsonFile.h  JsonStatus.h  JsonSteps.h
thinker2/Tools/Norm/source/: FileStatus.cpp  JsonFile.cpp  JsonStatus.cpp  JsonSteps.cpp  main.cpp
thinker2/include/: ActionPacman.h  Agent.h  BrainThinker.h  Command.h  CommandEvaluate.h  CommandInstall.h  CommandNewbie.h  CommandPlay.h  CommandTrain.h  Controller.h  ControllerKey.h  Defines.h  Filter.h  GameModelPacman.h  Ghost.h  IAction.h  IBrain.h  ICommand.h  IDataSource.h  IGameModel.h  IStep.h  LevelVelocity.h  Newbie.h  NewbieDTO.h  Pacman.h  Persistence.h  Player.h  SourceFullRAM.h  SourceRAM.h  SourceRGB.h  StepPacman.h  Str2Image.h  Trainner.h  Wall.h  Way.h  treeRam.h
thinker2/libs/optionparser/: CMakeLists.txt
thinker2/libs/optionparser/include/: OptionParser.h
thinker2/libs/optionparser/src/: OptionParser.cpp
thinker2/libs/optionparser/test/: CMakeLists.txt
thinker2/libs/thinker/: CMakeLists.txt  main.cpp
thinker2/libs/thinker/include/: BrainPersistence.h  Data.h  Layer.h  NeuralNetwork.h  NeuralNetworkDTO.h  Normalization.h  Perceptron.h  PerceptronDTO.h  TransitionByStep.h  TransitionHiperbolicTangent.h  TransitionSigmoid.h  TransitionSoftMax.h
thinker2/libs/thinker/src/: BrainPersistence.cpp  Data.cpp  Layer.cpp  NeuralNetwork.cpp  NeuralNetworkDTO.cpp  Normalization.cpp  Perceptron.cpp  PerceptronDTO.cpp  Persistence.cpp  TransitionByStep.cpp  TransitionHiperbolicTangent.cpp  TransitionSigmoid.cpp  TransitionSoftMax.cpp
thinker2/libs/thinker/test/: CMakeLists.txt  NeuralTest.cpp
thinker2/poc/RGBTool/: CMakeLists.txt  RGB.json  render.txt
thinker2/poc/RGBTool/TestAtariMap/: CMakeLists.txt  TestAtariMap.cpp
thinker2/poc/RGBTool/TestEvaluate/: CMakeLists.txt  TestEvaluate.cpp
thinker2/poc/RGBTool/TestMap/: CMakeLists.txt  TestMaping.cpp
thinker2/poc/RGBTool/TestMap/RenderFilesMapping/: render100.txt  render101.txt  render106.txt  render107.txt  render112.txt  render115.txt  render118.txt  render12.txt  render123.txt  render125.txt  render126.txt  render16.txt  render2.txt  render20.txt  render23.txt  render39.txt  render40.txt  render41.txt  render44.txt  render52.txt  render54.txt  render6.txt  render62.txt  render8.txt  render86.txt  render89.txt  render91.txt  render92.txt  render93.txt  render94.txt  render96.txt
thinker2/poc/RGBTool/TestResize/: CMakeLists.txt  TestResize.cpp
thinker2/poc/RGBTool/include/: Defines.h  Evaluate.h  Mapping.h  Resize.h  RgbTool.h  json.hpp
thinker2/poc/RGBTool/source/: Evaluate.cpp  Mapping.cpp  Resize.cpp  RgbTool.cpp
thinker2/poc/RGBTool/source_aux/: aux_evaluate.cpp  generate_matrix.cpp
thinker2/source/: ActionPacman.cpp  Agent.cpp  BrainThinker.cpp  CommandEvaluate.cpp  CommandInstall.cpp  CommandNewbie.cpp  CommandPlay.cpp  CommandTrain.cpp  Controller.cpp  ControllerKey.cpp  Filter.cpp  GameModelPacman.cpp  Ghost.cpp  LevelVelocity.cpp  Newbie.cpp  NewbieDTO.cpp  Pacman.cpp  Persistence.cpp  Player.cpp  SourceFullRAM.cpp  SourceRAM.cpp  SourceRGB.cpp  StepPacman.cpp  Str2Image.cpp  Trainner.cpp  Wall.cpp  Way.cpp  main.cpp  treeRam.cpp
thinker3/: CMakeLists.txt  README.md  main.cpp
thinker3/include/: IPythonScript.h  PythonByHand.h
thinker3/source/: PythonByHand.cpp  argumentos.py  calculadora.cpp  main  main.cpp  script.py  setup.py  test.py
(+132 files in other folders)
